--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -6,7 +6,7 @@
                 <h2>Login</h2>
                 <input placeholder="E-mail" [(ngModel)]="user.name"  [ngModelOptions]="{standalone: true}"/>
                 <input type="password" placeholder="Senha" [(ngModel)]="user.password"  [ngModelOptions]="{standalone: true}"/>
-                <button class="button" type="submit"  (click)="tryLogin()" routerLink="/profile">Entrar</button>
+                <button class="button" type="submit"  (click)="tryLogin()">Entrar</button>
             </form>
             <a class="back-link" routerLink="/cadastro">
                 <i class="fas fa-sign-in-alt"></i> 
@@ -14,7 +14,7 @@
             </a>
         </section>
         <div class="img-container col-md-6 col-lg-6" >
-            <img src="../../../assets/logo.png" alt="pets"/>
+            <img src="../../../assets/100530284_247223033035160_3380896911362883584_n.png" alt="pets"/>
         </div>
     </div>
 </div>
