--- a/src/app/components/profile/profile.component.scss
+++ b/src/app/components/profile/profile.component.scss
@@ -12,7 +12,7 @@
             padding: 0;
             margin-bottom: 10px;
             img{
-                height: 80px;
+                height: 70px;
             }
             span{
                 margin: 0;
@@ -75,6 +75,7 @@
             display: flex;
             align-items: center;
             max-width: 560px;
+            margin-bottom: 10px;
 
             &:hover{
                 box-shadow: 0 0 25px rgba(0,0,0,0.1);
@@ -92,6 +93,7 @@
                     p{
                         margin-bottom: 5px;
                         margin-left: 5px;
+                        word-wrap: anywhere;
                     }   
                 }
                 button{
@@ -122,6 +124,7 @@
 }
 
 .profile-modal{
+    padding: 0 20px;
     .petPic{
         text-align: center;
         img{
@@ -136,8 +139,18 @@
         div{
             margin-bottom: 4px;
             display: flex;
+            strong{
+                padding: 0;
+                margin-bottom: 2px;
+            }
             p{
                 margin: 0 5px;
+            }
+            input{
+                border-radius: 5px;
+                border: 1px solid $input-color;
+                background-color: #fff;
+                margin-bottom: 5px;
             }
         }
     }
@@ -166,6 +179,9 @@
                 button{
                     display: none;
                 }
+                img{
+                    height: 80px;
+                }
              }
             .option-group{
                 a.button{
@@ -182,6 +198,27 @@
                         color: $detail-color;
                         width: 40px;
                     }
+                }
+            }
+        }
+        ul {
+            flex-wrap: unset;
+            li{
+            width: 350px;
+            margin: 0 5px;
+            }
+        }
+    }
+    .profile-modal{
+        .petPic{
+        }
+    
+        .petInfo{
+            padding: 0 25px;
+            margin-top: 20px;
+            .row {
+                strong{
+                    padding: 0
                 }
             }
         }
