Adicionando o campo de espécies e tirando a obrigatoriedade do campo de doenças do pet

--- a/src/app/components/newpet/newpet.component.html
+++ b/src/app/components/newpet/newpet.component.html
@@ -55,6 +55,9 @@
                 </div>
                 
                 <input 
+                    placeholder="Espécie" 
+                    [(ngModel)]="pet.specie" [ngModelOptions]="{standalone: true}"/>
+                <input 
                     placeholder="Doenças" 
                     [(ngModel)]="pet.disease" [ngModelOptions]="{standalone: true}"/>
                 <button class="button" type="submit"  (click)="petRegister(pet)">
