--- a/src/app/components/profile/profile.component.scss
+++ b/src/app/components/profile/profile.component.scss
@@ -202,10 +202,11 @@
             }
         }
         ul {
-            flex-wrap: unset;
+            flex-wrap: wrap;
             li{
-            width: 350px;
-            margin: 0 5px;
+                width: 350px;
+                margin: 5px;
+                flex: 0 0 49%;
             }
         }
     }
@@ -221,6 +222,14 @@
                     padding: 0
                 }
             }
+        }
+    }
+}
+
+@media only screen and (min-width: $break-lg){
+    .profile-container {
+        ul {
+            flex-wrap: wrap;
         }
     }
 }
