--- a/src/app/components/schedule/schedule.component.scss
+++ b/src/app/components/schedule/schedule.component.scss
@@ -89,7 +89,10 @@
                         margin-right: 5px;
                     }
                     p{
-                        margin: 0 5px;
+                        margin-left: 0 !important;
+                            &:first-letter{
+                                text-transform: uppercase;
+                            }
                     }
                     i{
                         width: 15px;
@@ -167,6 +170,7 @@
             border-radius: 5px;
             color: $input-color;
             margin-bottom: 10px;
+            padding: 5px 10px;
         }
         &.schedule-hour{
             display: flex;
@@ -274,6 +278,9 @@
     }
     .profile-modal{
         .petInfo .row{
+            textarea, input{
+                margin-left: 5px;
+            }
             &.schedule-hour{
                 &::ng-deep ngb-timepicker {
                     padding: 0;
