--- a/src/app/components/profile/profile.component.scss
+++ b/src/app/components/profile/profile.component.scss
@@ -160,11 +160,11 @@
     .fas{
         color: $detail-color;
     }
-    .trash-icon{
-        position: absolute;
-        margin-left: 25px;
-        left: 0;
-    }
+    // .trash-icon{
+    //     position: absolute;
+    //     margin-left: 25px;
+    //     left: 0;
+    // }
 }
 
 
@@ -206,20 +206,41 @@
             li{
                 width: 350px;
                 margin: 5px;
-                flex: 0 0 49%;
+                flex: 0 0 48%;
             }
         }
     }
     .profile-modal{
+        padding: 10px 20px;
+        justify-content: left;
+        button{
+            width: 40px;
+            height: 40px;
+            &.btn-save{
+                position: absolute;
+                right: 0;
+                width: max-content;
+                margin-right: 30px;
+            }
+        }
         .petPic{
         }
     
         .petInfo{
             padding: 0 25px;
             margin-top: 20px;
-            .row {
-                strong{
-                    padding: 0
+            .row{
+                align-items: center;
+                input{
+                    height: 38px;
+                }
+                &.select-group {
+                    display: flex;
+                    flex-wrap: inherit;
+                    margin-bottom: 8px;
+                    strong{
+                        padding: 0
+                    }
                 }
             }
         }
