--- a/src/app/components/newpet/newpet.component.scss
+++ b/src/app/components/newpet/newpet.component.scss
@@ -73,6 +73,10 @@
                 margin-bottom: 5px;
                 font-size: 16px;
             }
+            span{
+                color: red;
+                margin-left: 10px;
+            }
            .input-group{
                 display: flex;
                 div {
