--- a/src/app/components/newpet/newpet.component.scss
+++ b/src/app/components/newpet/newpet.component.scss
@@ -12,7 +12,7 @@
 
         section{
             .pet-photo{
-                background:url("../../../assets/picpetDefault.png");
+                // background:url("../../../assets/picpetDefault.png");
                 background-size: cover;
                 margin: 0px auto 20px auto;
                 width: 250px;
