--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -25,7 +25,8 @@
         <ul class="col-12" >
             <li class="col-sm-12 col-md-6 col-lg-6" (click)="open(mymodal, i)" *ngFor="let pet of pets; let i as index;">
                 <div class="petPic">
-                    <img src="../../../assets/picpetDefault.png" alt="pets" />
+                    <img *ngIf="pet.photo == null" src="../../../assets/picpetDefault.png" alt="pets" />
+                    <img *ngIf="pet.photo" src="{{ pet.photo }}" alt="pets" />
                 </div> 
                 <div class="petInfo">
                     <div>
@@ -49,11 +50,24 @@
             <span aria-hidden="true">&times;</span>
         </button>
     </div>
+
     <div class="modal-body profile-modal container">
-      
         <div class="petPic">
-            <img src="../../../assets/picpetDefault.png" alt="pets" />
+            <img *ngIf="pet.photo == null" src="../../../assets/picpetDefault.png" alt="pets" />
+            <img *ngIf="pet.photo" src="{{pet.photo}}" alt="pets" />
         </div> 
+
+        <div class="editPetPic">
+            <label  disabled [attr.disabled]="IsTextBoxDisabled?'true':null" class="image-upload-container btn btn-bwm">
+                <input  class="editPetPicInput" disabled [attr.disabled]="IsTextBoxDisabled?'true':null" #imageInput
+                    type="file"
+                    accept="image/*"
+                    (change)="editPhoto(imageInput)">
+                    <i class="fas fa-camera"></i>
+            </label>
+            <input  disabled [attr.disabled]="IsTextBoxDisabled?'true':null" type="file" #fileUpload id="fileUpload" name="fileUpload" multiple="multiple" accept="image/*" style="display:none;" />
+        </div>
+        
         <div class="petInfo">
             <div class="row">
                 <strong class="col-sm-12 col-md-2">Nome: </strong>
