--- a/src/app/components/profile/profile.component.scss
+++ b/src/app/components/profile/profile.component.scss
@@ -80,9 +80,22 @@
             &:hover{
                 box-shadow: 0 0 25px rgba(0,0,0,0.1);
             }
-
-            .petPic img{
-                width: 100px;
+            
+            .petPic {
+                width: 155px;
+                height: 100px;
+                overflow: hidden;
+                border-radius: 50px;
+                display: flex;
+                align-items: center;
+                text-align: center;
+                justify-content: center;
+                border: 2px solid $detail-color ;
+                
+                img{
+                    width: auto;
+                    height: 100px;
+                }
             }
 
             .petInfo{
@@ -127,12 +140,35 @@
     padding: 0 20px;
     .petPic{
         text-align: center;
+        width: 250px;
+        height: 250px;
+        border-radius: 50%;
+        overflow: hidden;
+        display: flex;
+        justify-content: center;
+        margin: auto;
+        border: 3px solid $detail-color;
         img{
             margin: auto;
-            width: 200px;
+            width: auto;
+            height: 250px;
         }
     }
-
+    .editPetPic{
+        text-align: center;
+        label{
+            border: none;
+            font-size: 25px;
+            margin-bottom: 0;
+            height: 55px;
+            .editPetPicInput{
+                display: none !important;
+            }
+            &:hover{
+                font-size: 28px;
+            }
+        }
+    }
     .petInfo{
         padding: 20px;
         font-size: 16px;
@@ -207,6 +243,9 @@
                 width: 350px;
                 margin: 5px;
                 flex: 0 0 48%;
+                .petPic{
+                    width: 160px;
+                }    
             }
         }
     }
@@ -251,6 +290,9 @@
     .profile-container {
         ul {
             flex-wrap: wrap;
+            li .petPic{
+                width: 130px;
+            }
         }
     }
 }
